--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,97 @@ footer {
     width: 40px;
     margin-right: 10px;
 }
+
+/** contacto **/
+
+section {
+    padding: 7em 10em;
+}
+h2 {
+    font-size: 4em;
+    text-align: center;
+}
+.container__div {
+    padding: 7em;
+}
+.form__div form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.form__container_tex,
+.button__container {
+    grid-column: 1 / 3;
+}
+.form__container_ap input,
+.form__container_em input,
+.form__container_tel input,
+.form__container_pr input,
+.form__container_tex textarea {
+    width: 98%;
+    background: none;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #0AD777;
+    margin-right: 1px;
+}
+.form__container_tex textarea {
+    width: 100%;
+}
+.form__container_ap label,
+.form__container_em label,
+.form__container_tel label,
+.form__container_pr label,
+.form__container_tex label {
+    font-size: 1.2em;
+}
+.button__container button {
+    width: 100%;
+    height: 35px;
+    border: none;
+    background-color: #0AD777;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+}
+.button__container a {
+    text-decoration: none;
+    color: #111;
+    font-size: 1.5em;
+    margin-top: 5px;
+}
+.info__div {
+    margin-top: 10px;
+}
+.info__div p {
+    font-size: 1.2em;
+}
+.li__email_img,
+.li__tel_img,
+.li__ub_img {
+    width: 25px;
+    height: 25px;
+    margin-right: 5px;
+}
+.li__email,
+.li__tel,
+.li__ub {
+    display: flex;
+    margin-top: 5px;
+}
+.li__email p,
+.li__tel p,
+.li__ub p {
+    font-size: 1.2em;
+    text-align: center;
+}
+@media (min-width: 845px) {
+    .container__div {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .info__div {
+        margin-left: 10px;
+    }
+}
