--- a/css/style.css
+++ b/css/style.css
@@ -161,19 +161,22 @@ footer {
 
 /** contacto **/
 
-section {
-    padding: 7em 10em;
-}
 h2 {
     font-size: 4em;
     text-align: center;
 }
 .container__div {
-    padding: 7em;
+    padding: 5em;
 }
 .form__div form {
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+.form__container {
+    background-color: #111;
+    max-width: 80vw;
+    color: #fff;
+    padding: 3rem;
 }
 .form__container_tex,
 .button__container {
@@ -182,24 +185,29 @@ h2 {
 .form__container_ap input,
 .form__container_em input,
 .form__container_tel input,
-.form__container_pr input,
-.form__container_tex textarea {
+.form__container_pr input {
     width: 98%;
     background: none;
     outline: none;
     border: none;
     border-bottom: 1px solid #0AD777;
-    margin-right: 1px;
+    padding: 1rem;
 }
 .form__container_tex textarea {
     width: 100%;
+    width: 98%;
+    background: none;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #0AD777;
 }
 .form__container_ap label,
 .form__container_em label,
 .form__container_tel label,
 .form__container_pr label,
 .form__container_tex label {
-    font-size: 1.2em;
+    font-size: 1.3em;
+    margin-bottom: 1rem;
 }
 .button__container button {
     width: 100%;
@@ -210,19 +218,23 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 15px;
 }
 .button__container a {
     text-decoration: none;
     color: #111;
-    font-size: 1.5em;
-    margin-top: 5px;
+    font-size: 1.2em;
 }
 .info__div {
-    margin-top: 10px;
+    background-color: #666;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /*max-height: 65vh;*/
 }
 .info__div p {
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 .li__email_img,
 .li__tel_img,
@@ -244,9 +256,15 @@ h2 {
     text-align: center;
 }
 @media (min-width: 845px) {
+    .container {
+        margin: 3rem 5rem;
+    }
     .container__div {
         display: grid;
         grid-template-columns: 2fr 1fr;
+    }
+    .form__div {
+        width: 45vw;
     }
     .info__div {
         margin-left: 10px;
