--- a/css/style.css
+++ b/css/style.css
@@ -159,114 +159,108 @@ footer {
     margin-right: 10px;
 }
 
-/** contacto **/
+/*! contacto !*/
 
-h2 {
-    font-size: 4em;
-    text-align: center;
-}
+.container__contac {
+    background-color: #000;
+    padding: 1rem;
+} 
 .container__div {
-    padding: 5em;
+    box-shadow: 0 0 20px #fff;
 }
-.form__div form {
+.contactoh2 {
+    font-size: 2.5em;
+    text-align: center;
+    color: #fff;
+    padding-top: 5rem;
+    margin-bottom: 3rem;
+}
+
+/** formulario **/
+
+.form__div {
+    background-color: #000;
+    padding: 1rem;
+    font-size: 0.8em;
+    color: #999;
+}
+.form__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+.form__container div {
+    display: flex;
+    flex-direction: column-reverse;
+}
+form {
+    margin: 0;
+    padding: 0.5rem;
+}
 .form__container {
-    background-color: #111;
-    max-width: 80vw;
-    color: #fff;
-    padding: 3rem;
+    margin-top: 1rem;
+    padding: 0.3rem;
 }
-.form__container_tex,
-.button__container {
-    grid-column: 1 / 3;
-}
-.form__container_ap input,
-.form__container_em input,
-.form__container_tel input,
-.form__container_pr input {
-    width: 98%;
+.form__container input,
+.form__container textarea {
+    width: 100%;
+    padding: 1em;
+    border: none;
     background: none;
     outline: none;
+    border-bottom: 1px solid #F00255;
+    color: #fff;
+}
+.form__container button {
     border: none;
-    border-bottom: 1px solid #0AD777;
-    padding: 1rem;
+    background-color: #F00255;
+    font-size: 1.3em;
+}
+.form__container button:focus {
+    
+}
+.form__container button a {
+    text-decoration: none;
+    color: #000;
+}
+.form__container button a:hover {
+    color: #fff;
 }
 .form__container_tex textarea {
-    width: 100%;
-    width: 98%;
-    background: none;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #0AD777;
+    resize: none;
 }
-.form__container_ap label,
-.form__container_em label,
-.form__container_tel label,
-.form__container_pr label,
-.form__container_tex label {
-    font-size: 1.3em;
-    margin-bottom: 1rem;
+.form__container_tex {
+    grid-column: 1 / 3;
+    padding-top: 1rem;
 }
-.button__container button {
-    width: 100%;
-    height: 35px;
-    border: none;
-    background-color: #0AD777;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-}
-.button__container a {
-    text-decoration: none;
-    color: #111;
-    font-size: 1.2em;
-}
+
+/** informacion **/
+
 .info__div {
-    background-color: #666;
-    padding: 1rem;
+    background-color: #444;
+    padding: 0.5rem;
+}
+.info__div_p {
+    font-size: 2em;
+    color: #fff;
+}
+ul {
+    list-style-type: none;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    /*max-height: 65vh;*/
 }
-.info__div p {
+li {
+    padding-top: 15px;
     font-size: 1.3em;
+    color: #fff;
 }
-.li__email_img,
-.li__tel_img,
-.li__ub_img {
+ul img {
     width: 25px;
-    height: 25px;
     margin-right: 5px;
 }
-.li__email,
-.li__tel,
-.li__ub {
-    display: flex;
-    margin-top: 5px;
+.info__p {
+    font-size: 1.3em;
+    color: #fff;
 }
-.li__email p,
-.li__tel p,
-.li__ub p {
-    font-size: 1.2em;
-    text-align: center;
-}
-@media (min-width: 845px) {
-    .container {
-        margin: 3rem 5rem;
-    }
-    .container__div {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-    }
-    .form__div {
-        width: 45vw;
-    }
-    .info__div {
-        margin-left: 10px;
-    }
+@media (max-width: ) {
+
 }
