--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body {
     justify-content: space-around;
 }
 .nav_container_marca {
-    width: 300px;
-    height: 200px;
+    width: 200px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -27,11 +27,11 @@ body {
     border-radius: 100%;
 }
 .nav_container_marca_h {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     color: #F00255;
 }
 .nav_container_marca_p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #fff;
 }
 .nav_a {
@@ -163,17 +163,10 @@ footer {
 
 .container__contac {
     background-color: #000;
-    padding: 1rem;
+    padding: 4rem 7rem;
 } 
 .container__div {
     box-shadow: 0 0 20px #fff;
-}
-.contactoh2 {
-    font-size: 2.5em;
-    text-align: center;
-    color: #fff;
-    padding-top: 5rem;
-    margin-bottom: 3rem;
 }
 
 /** formulario **/
