--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 body {
@@ -163,7 +164,7 @@ footer {
 
 .container__contac {
     background-color: #000;
-    padding: 4rem 7rem;
+    padding: 3rem 1rem;
 } 
 .container__div {
     box-shadow: 0 0 20px #fff;
@@ -274,5 +275,8 @@ ul img {
     .container__div {
         display: grid;
         grid-template-columns: 2fr 1fr;
+    }
+    .container__contac {
+        padding: 4rem 7rem;
     }
 }
